Update package.json to remove unused dependencies

--- a/tryon/package.json
+++ b/tryon/package.json
@@ -1,9 +1,8 @@
 {
+  "name": "tryon-serverless",
   "type": "module",
+  "private": true,
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "sharp": "^0.33.3"
+    "@runpod/ai-serverless": "^1.1.0"
   }
 }
-
