--- a/tryon/Dockerfile
+++ b/tryon/Dockerfile
@@ -1,9 +1,6 @@
-FROM node:18-slim
-RUN apt-get update && apt-get install -y python3 build-essential && rm -rf /var/lib/apt/lists/*
+FROM node:20-slim
 WORKDIR /app
-COPY package.json ./
-RUN npm ci --omit=dev
+COPY package*.json ./
+RUN npm ci --only=production
 COPY server.js ./
-EXPOSE 3000
-CMD ["node","server.js"]
-
+CMD ["node", "server.js"]
