--- a/human/requirements.txt
+++ b/human/requirements.txt
@@ -8,3 +8,4 @@ opencv-python-headless>=4.9.0.80
 torch>=2.1.0
 torchvision>=0.16.0
 git+https://github.com/facebookresearch/segment-anything.git
++fashion-clip>=0.2.0
